--- a/css/estilo.css
+++ b/css/estilo.css
@@ -218,32 +218,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-}
-.background-products{
-    background-color: var(--blue);
-    width: 90%;
-    height: 90%;
-    border-radius: 20px;
-    display: flex;
-    gap: 50px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    gap: 3rem;
+    padding: 10rem 0rem;
 }
+
 .container-cards{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 2.2rem;
+    flex-wrap: wrap;
+
 }
 .card{
-    width: 360px;
-    height: 500px;
+    width: 23rem;
+    height: 30rem;
     border-radius: 20px;
     overflow: hidden; 
-    border: 8px solid #fff;
+    transition: all ease 0.3s;
     position: relative;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
+}
+.card:hover{
+    
+    transform: scale(1.1);
+    box-shadow: 0px 10px 20px 8px rgba(0,0,0,0.19),
+0px 6px 6px 0px rgba(0,0,0,0.23);
+
 }
 .card-img{
     width: 100%;
