--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,9 +16,9 @@
 .header {
     background: #3a7bd5;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #3a60737f, #3a7bd592), url(../imgs/impresora222.jpg);
+    background: -webkit-linear-gradient(to right, #0000007f, #00000092), url(../imgs/DeWatermark.ai_1718503209320.png);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #3a607352, #29579851), url(../imgs/impresora999.webp);
+    background: linear-gradient(to right, #00000052, #00000051), url(../imgs/portada3.png);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
@@ -136,19 +136,11 @@
 }
 
 .img-tarjeta {
-    width: 400px;
+    width: 100%;
+    object-fit: contain;
 }
 
-.img-tarjeta-1 {
-    margin-top: 20px;
-    width: 70%;
-    height: 90%;
-}
 
-.img-tarjeta-2 {
-    width: 55%;
-    height: 65%;
-}
 
 .img-tarjeta-3 {
     width: 58%;
@@ -204,8 +196,8 @@
     font-size: 45px;
 }
 
-#sobre-nosotros {
-    padding: 30px 100px;
+#about-us {
+    padding: 5rem 10rem;
 }
 
 
@@ -221,7 +213,7 @@
     flex-direction: column;
     height: 100%;
     gap: 3rem;
-    padding: 10rem 0rem;
+    padding: 6rem 0rem;
 }
 
 .container-cards{
@@ -722,6 +714,7 @@
         padding: 30px 20px;
         gap: 50px;
         justify-content: center;
+        align-items: flex-start;
     }
 
     .sobre-nosotros-footer {
@@ -855,6 +848,7 @@
 
     .contenedor-pie {
         justify-content: center;
+        align-items: flex-start;
         padding: 80px 80px;
     }
 
