--- a/css/admin.css
+++ b/css/admin.css
@@ -188,4 +188,6 @@
     border-radius: 4px;
     margin: 2px; /* Add some space around the track */
   }
-  
+  #login-alert{
+    display: none;
+}
