--- a/css/estilo.css
+++ b/css/estilo.css
@@ -261,7 +261,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transition: 2s;
+    transition: 1.5s;
 }
 .card:hover .card-body{
     right: 0;
@@ -452,7 +452,11 @@
   .icono-login{
     z-index: 20;
   }
-
+.background-card{
+    width: 100%;
+    height: 100%;
+    background-image: url(./imgs/cartucho-about-product.jpg);
+}
 
 @media (max-width: 321px) {
 
