--- a/css/estilo.css
+++ b/css/estilo.css
@@ -488,6 +488,8 @@
         padding: 0 10px;
     }
 
+
+
 }
 
 @media (max-width: 500px) {
@@ -500,7 +502,7 @@
     }
 
     .nav-link {
-        font-size: 16px;
+        font-size: 13px;
     }
     .nav-item{
         margin: 0px 5px;
@@ -521,9 +523,10 @@
 
     .descripcion-parrafo{
         text-align: center;
-        font-size: 35px;
+        font-size: 25px;
         margin: 0;
     }
+
     .descripcion-logo {
         padding: 0;
         width: 80%;
@@ -533,12 +536,16 @@
         padding: 70px 60px;
     }
 
-
-    /* categorias de los productos  */
-    .titulo-2 {
-        font-size: 34px;
+    #about-us {
+        padding: 5rem 4rem;
     }
 
+
+    /* categorias de los productos  */
+
+    .titulo-2{
+        font-size: 25px;
+    }
     .categoria {
         flex-direction: column;
     }
@@ -564,6 +571,10 @@
     .linea-categoria {
         width: 80%;
 
+    }
+
+    .card{
+        width: 70%;
     }
 
     .img-categoria {
