--- a/css/admin.css
+++ b/css/admin.css
@@ -68,6 +68,7 @@
 
 .text-black{
   font-size: 40px;
+  margin: 0;
 }
 
 .general{
@@ -190,4 +191,15 @@
   }
   #login-alert{
     display: none;
+}
+
+/* seach */
+
+.buscador-section{
+  margin: 20px;
+  
+}
+
+.search{
+  border-radius: 20px;
 }
